matrix_macros/tests/trybuild/compile_fail.rs
use matrix_macros::*;

fn main() {
    let _ = matrix![[0, 1, 2], [3, 4]];
}
